--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -364,35 +364,63 @@ jobs:
             set -Eeuo pipefail
             cd /opt/platform
             
-            echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+            # login to GHCR
+            echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
             
-            # Ensure docker-rollout is available
-            if ! docker rollout --help >/dev/null 2>&1; then
-              echo "docker-rollout CLI not found. Run your vm_init or install the plugin." >&2
-              exit 1
+            # Resolve immutable tag from workflow (falls back to 7-char GITHUB_SHA)
+            SHA_TAG="${{ steps.vars.outputs.short_sha }}"
+            if [ -z "$SHA_TAG" ]; then
+              SHA_TAG="$(echo "${GITHUB_SHA}" | cut -c1-7)"
             fi
+            echo "Using SHA_TAG=$SHA_TAG"
             
-            # Pull immutable SHA tags for services
-            IFS=',' read -ra SERVICES <<< "${{ env.SERVICES_TO_PUSH }}"
-            SHA_TAG="${{ steps.meta.outputs.sha }}"
+            # Pull images by immutable tag
+            SERVICES_CSV="${{ env.SERVICES_TO_PUSH }}"
+            IFS=',' read -ra SERVICES <<< "$SERVICES_CSV"
             for service in "${SERVICES[@]}"; do
-              docker pull "ghcr.io/${{ env.IMAGE_NAME }}/${service}:${SHA_TAG}"
+              service="$(echo "$service" | xargs)"  # trim
+              [ -n "$service" ] || continue
+              echo "Pulling ghcr.io/${{ env.IMAGE_NAME }}/$service:$SHA_TAG"
+              docker pull "ghcr.io/${{ env.IMAGE_NAME }}/$service:$SHA_TAG"
             done
-            docker pull "ghcr.io/${{ env.IMAGE_NAME }}/api:${SHA_TAG}"
+            echo "Pulling ghcr.io/${{ env.IMAGE_NAME }}/api:$SHA_TAG"
+            docker pull "ghcr.io/${{ env.IMAGE_NAME }}/api:$SHA_TAG"
             
             # Export tag for compose
-            echo "IMAGE_TAG=${SHA_TAG}" > .deploy.env
+            echo "IMAGE_TAG=$SHA_TAG" > .deploy.env
+            echo "Wrote .deploy.env:"
+            cat .deploy.env
             
-            # Drain-aware rollout for API and WEB; simple for BACKGROUND
-            docker rollout -f docker-compose.yml --env-file .deploy.env \
-              --pre-stop-hook "sh -c 'touch /tmp/drain && sleep 30'" api
+            # Decide strategy: docker-rollout vs compose fallback
+            if docker rollout --help >/dev/null 2>&1; then
+              echo "Using docker-rollout"
             
-            docker rollout -f docker-compose.yml --env-file .deploy.env \
-              --pre-stop-hook "sh -c 'touch /tmp/drain && sleep 20'" web
+              docker rollout -f docker-compose.yml --env-file .deploy.env \
+                --pre-stop-hook "sh -c 'touch /tmp/drain && sleep 30'" api
             
-            docker rollout -f docker-compose.yml --env-file .deploy.env background
+              docker rollout -f docker-compose.yml --env-file .deploy.env \
+                --pre-stop-hook "sh -c 'touch /tmp/drain && sleep 20'" web
             
-            # Clean up dangling images only
-            docker image prune -f
+              if grep -qE '^[[:space:]]*background:' docker-compose.yml; then
+                docker rollout -f docker-compose.yml --env-file .deploy.env background
+              fi
+            else
+              echo "docker-rollout not found; using docker compose fallback"
+            
+              # Create/refresh containers with the new immutable tag.
+              # Assumes your compose uses: image: ghcr.io/...:${IMAGE_TAG}
+              docker compose --env-file .deploy.env pull
+              # Update api first (drain hook supported in your container's preStop or entrypoint)
+              docker compose --env-file .deploy.env up -d api
+              # Then web
+              docker compose --env-file .deploy.env up -d web
+              # Optional background
+              if grep -qE '^[[:space:]]*background:' docker-compose.yml; then
+                docker compose --env-file .deploy.env up -d background
+              fi
+            fi
+            
+            # Clean up dangling layers
+            docker image prune -f || true
             
             echo "🚀 Deployment complete @ ${SHA_TAG}"
